_sass/tale/components/_code.scss
pre,
code {
  font-family: $code-font-family;
}

code {
  background-color: $bg-code-color;
  border-radius: 3px;
  color: $code-color;
  font-size: 70%;
  padding: .25em .5em;
}

pre {
  margin: 0 0 1rem;
}

pre code {
  background-color: transparent;
  color: inherit;
  font-size: 70%;
  padding: 0;

  @media (width <=400px) {
    font-size: 80%;
  }
}

// Code block highlighting
.highlight {
  background-color: $bg-code-color;
  border-radius: 3px; // Round the corners
  line-height: 1.4;
  margin: 0 0 1rem; // Bottom margin only
  padding: 0.5rem;

  pre {
    margin: 0;
    padding: 0;
    overflow-x: auto;
  }

  code {
    padding: 0;
  }

  table {
    margin: 0;
    border-spacing: 0;
  }

  td {
    padding: 0;
  }

  .lineno {
    color: $secondary-font-color;
    display: inline-block; // Ensures the null space also isn't selectable
    padding: 0 .75rem 0 .25rem;

    // Make sure numbers aren't selectable
    user-select: none;
  }
}

